fixed navbar scroll down error, by changing overflow: hidden to overflow: clip

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  overflow: clip
 }
 
 code {
